<resources>
    <string name="app_name">MboraSystem</string>
    <string name="nome_sistema">MboraSystem</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="tvIntroduzirCodigoPin">Introduzir código PIN</string>
    <string name="infoPinIncorreto">PIN incorreto</string>
    <string name="senha_incorreta">Senha incorreta</string>
    <string name="infoAviso1">
        <br>Código PIN incorreto\n</br>
        <br>A aplicação será bloqueada\n</br>
        por 1 minuto se errar mais 2 vezes
    </string>
    <string name="infoAviso2">
        <br>Código PIN incorreto\n</br>
        <br>A aplicação será bloqueada\n</br>
        por 1 minuto se errar mais 1 vez
    </string>
    <string name="infoActivacaoMboraSystem">
        Você precisa inserir uma chave do app (App key) para activar o MboraSystem.
        Sua chave do app (App key) irá ser enviada para o seu número de telefone e para o seu email, após a criação da conta online do MboraSystem e pagamentos regularizados.
    </string>
    <string name="nome_produto">Nome do Produto</string>
    <string name="Sobre_Nome">Sobrenome*</string>
    <string name="nifbi">NIF da empresa*</string>
    <string name="Numero_Telefone">Número de telefone*</string>
    <string name="Numero_Telefone_Alternativo">Número de telefone alternativo*</string>
    <string name="Email">Email*</string>
    <string name="localizacao_e_endereco">Localização e Endereço da empresa</string>
    <string name="identificação">Identificação</string>
    <string name="municipio">Município*</string>
    <string name="bairro">Bairro*</string>
    <string name="rua">Rua*</string>
    <string name="codigopin">*Código PIN</string>
    <string name="criar_conta">Criar Conta</string>
    <string name="codigopinnovamente">*Repetir código PIN</string>
    <string name="nome_invalido">Nome não é válido</string>
    <string name="sobrenome_invalido">Sobrenome não é válido</string>
    <string name="nifbi_invalido">NIF não é válido</string>
    <string name="numero_invalido">Número não é válido</string>
    <string name="email_invalido">Email não é válido</string>
    <string name="municipio_invalido">Município não é válido</string>
    <string name="bairro_invalido">Bairro não é válido</string>
    <string name="rua_invalida">Rua não é válida</string>
    <string name="nome_curto">"Nome muito curto "</string>
    <string name="sobrenome_curto">Sobrenome muito curto</string>
    <string name="nifbi_incompleto">NIF incompleto</string>
    <string name="numero_incompleto">"Número incompleto "</string>
    <string name="senha_invalida">Senha não é válida</string>
    <string name="senha_minima">No mínimo 8 caracteres</string>
    <string name="codigopin_incompleto">O código PIN requer 6 dígitos</string>
    <string name="pin_diferente">Código PIN diferente</string>
    <string name="entrar_conta">Entrar em minha conta</string>
    <string name="pressior_sair">Pressione novamente voltar para sair</string>
    <string name="codigo_activacao">Código de Activação</string>
    <string name="activar_mborasystem">Activar MboraSystem</string>
    <string name="introduzir_codigo_activacao">Introduzir código de activação</string>
    <string name="active_mborasystem">Active o MboraSystem</string>
    <string name="categoria_produto">Categoria/Produto</string>
    <string name="usuario">Usuário</string>
    <string name="venda">Venda</string>
    <string name="cliente">Cliente</string>
    <string name="dashboard">Dashboard</string>
    <string name="dados_usuarios_actividades">Dados de usuários e suas actividades</string>
    <string name="lista_produtos_categorias">Lista de produtos e suas categorias</string>
    <string name="venda_produtos_efectuadas">Venda de produtos efectuadas</string>
    <string name="dados_clientes_compras">Dados de clientes e suas compras</string>
    <string name="casa">Casa</string>
    <string name="usuarios">USUÁRIOS</string>
    <string name="criar_usuario">CRIAR USUÁRIO</string>
    <string name="provincia">Província*</string>
    <string name="normal">Normal</string>
    <string name="admin">Administrador</string>
    <string name="criar">CRIAR</string>
    <string name="cancelar">Cancelar</string>
    <string name="usuario_criado">Usuário Criado</string>
    <string name="usuario_nao_criado">Erro: Usuário não criado</string>
    <string name="editar">Editar</string>
    <string name="eliminar_produto">Eliminar Produto</string>
    <string name="elim_pds">Eliminar Produtos</string>
    <string name="desativar">Desativar</string>
    <string name="estado">Estado:</string>
    <string name="Estado">ESTADO</string>
    <string name="tipo">Tipo:</string>
    <string name="desactivado">Desactivado</string>
    <string name="estado_desbloqueado">Desbloqueado</string>
    <string name="risc_text" translatable="false">&lt;s&gt;%1$s&lt;/s&gt;</string>
    <string name="estado_bloqueado">Bloqueado</string>
    <string name="salvar_alteracao">Salvar Alteração</string>
    <string name="falha_lista_usuario">Falha ao carregar lista de usuários</string>
    <string name="alteracao_feita">Alteração feita</string>
    <string name="usuario_eliminado">Usuário eliminado</string>
    <string name="usuario_nao_eliminado">Usuário não eliminado</string>
    <string name="confirmacao">Confirmação (eliminar)</string>
    <string name="confirmar">CONFIRMAR</string>
    <string name="codigopin_invalido">Código pin não é válido</string>
    <string name="criar_categoria">CRIAR CATEGORIA</string>
    <string name="categorias">CATEGORIAS</string>
    <string name="nova_categoria">Nova categoria</string>
    <string name="categoria_criada">Categoria criada</string>
    <string name="categoria_existe">Esta categoria já existe</string>
    <string name="categoria_nao_criada">Categoria não criada</string>
    <string name="falha_lista_categoria">Falha ao carregar categorias</string>
    <string name="alterar_categoria">Alterar Categoria</string>
    <string name="abrir">Abrir</string>
    <string name="cadastrar_produto">CADASTRAR PRODUTO</string>
    <string name="criar_produto">Criar produto</string>
    <string name="preco">Preço</string>
    <string-array name="quantidade">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
    </string-array>
    <string name="codigo_bar">Código de barra</string>
    <string name="scanear">scanear</string>
    <string name="scaner_code_bar_cancelado">Scaneamento de código de barra cancelado</string>
    <string name="novo_produto">Novo produto</string>
    <string name="foto">Foto</string>
    <string name="falha_carregar_img">Falha ao carregar a imagem</string>
    <string name="img_carregada">Imagem carregada</string>
    <string name="categorias_carregar">Categorias carregadas</string>
    <string name="alinhar_codigo_barra">Alinhar código de barras para fazer a leitura</string>
    <string name="continuar_criar_produto">Continuar a criar produto</string>
    <string name="descricao">Descrição</string>
    <string name="descricao_invalida">Descrição não é válida</string>
    <string name="bazar">Bazar</string>
    <string name="bebidas">Bebidas</string>
    <string name="charcutaria_lacticios">Charcutaria/Lacticínios</string>
    <string name="frutas_legumes">Frutas e Legumes</string>
    <string name="higiene_beleza">Higiene e Beleza</string>
    <string name="merciaria">Merciaria</string>
    <string name="padaria_pastelaria">Padaria/Pastelaria</string>
    <string name="peixaria">Peixaria</string>
    <string name="talho_congelados">Talho e Congelados</string>
    <string name="maquina_electrodomestico">Máquina Electrodoméstico etc</string>
    <string name="agua_gasosa_sumo">Água Gasosa Sumo etc</string>
    <string name="chourico_queijo_leite_yogurte">Chouriço Queijo Leite Iogurte etc</string>
    <string name="tomate_maca_laranja">Tomate Maçã Laranja etc</string>
    <string name="papelhigienico_detergente_pastadedente_batom">Papel higiênico Detergente Pasta de dente Batom etc</string>
    <string name="arroz_fuba_bolacha_cereais_cha_oleo">Arroz Fuba Bolacha Cereais Chá Óleo etc</string>
    <string name="pao_bolo_pasteis_bolinho">Pão Bolo Pastéis Bolinho etc</string>
    <string name="peixe_lagosta_caranguejo">Peixe Lagosta Caranguejo etc</string>
    <string name="carne_frango_salsicha">Carne Frango Salsicha etc</string>
    <string name="preco_invalido">Preço não é válido</string>
    <string name="quantidade_invalida">Quantidade não é válida</string>
    <string name="codigobarra_invalido">Código de barra não é válido</string>
    <string name="produto_nao_criado">Produto não criado</string>
    <string name="produto_existe">Produto já existe</string>
    <string name="produto_criado">Produto criado</string>
    <string name="falha_lista_produto">Produtos não carregados</string>
    <string name="idcategoria_nao_encontrado">Id de categoria não encontrado</string>
    <string name="produtos">PRODUTOS</string>
    <string name="mascara_chave_app" translatable="false">#####-#####-#####-#####</string>
    <string name="politica_privacidade">Política de privacidade</string>
    <string name="ok">OK</string>
    <string name="entrar">Entrar</string>
    <string name="pesquisar_produto">Pesquisar produto</string>
    <string name="pesquisar_categoria">Pesquisar categoria</string>
    <string name="fechar">Fechar</string>
    <string name="introduza_chave_aqui">Introduza a chave aqui</string>
    <string name="subscricao_pacote">Subscrição de pacote</string>
    <string name="bloquear">Bloquear</string>
    <string name="sair">Sair</string>
    <string name="filtrar_produto">Filtrar Produto</string>
    <string name="precisa_ajuda">Precisa de ajuda?</string>
    <string name="exportar_produto">Exportar Produtos</string>
    <string name="importar_produto">Importar Produtos</string>
    <string name="exportar_importar_produto">Exportar/Importar Produtos</string>
    <string name="exportar_importar_categoria">Exportar/Importar Categorias</string>
    <string name="exportar_categoria">Exportar Categorias</string>
    <string name="importar_categoria">Importar Categorias</string>
    <string name="factura">Factura</string>
    <string name="senha">Senha*</string>
    <string name="alterar_codigo_pin">Alterar código pin</string>
    <string name="exp_venda">Exportar Venda(s)</string>
    <string name="imp_venda">Importar Venda(s)</string>
    <string name="scan_bar">Scanear Código de Barra</string>
    <string name="ace">Acerca</string>
    <string name="idm">Idioma</string>
    <string name="calc">Calculadora</string>
    <string name="alt_idm">Alterar idioma</string>
    <string name="n_most_nov_config">Não mostrar novamente a caixa de mensagem sobre factura não guardada</string>
    <string name="apn">APN (Rede de Pontos de Acesso)</string>
    <string name="config_rede">Configurações de rede</string>
    <string name="act_aut_biom">Autenticação biométrica</string>
    <string name="exportcli">Exportar cliente(s)</string>
    <string name="importcli">Importar cliente(s)</string>
    <string name="ipt_pre_def">Imposto Predefinido</string>
    <string name="md">Moeda</string>
    <string name="tx_iva_pdf">Taxa de IVA Predefinida</string>
    <string name="mtv_pdf_isc">Motivo Predefinido de Isenção</string>
    <string name="dds_cmc">Dados Comerciais (Factura)</string>
    <string name="nm_cmc">Nome Comercial</string>
    <string name="nib">NIB (Conta Bancária)</string>
    <string name="iban" translatable="false">IBAN</string>
    <string name="view">Visualização</string>
    <string name="text_rdp_fact">Texto Rodapé  (Factura)</string>
    <string name="dat_ems">Data de emissão</string>
    <string name="elm_pro_car">Eliminar produto(s) de carrinho</string>
    <string name="aut_bio">Autenticação Biométrica</string>
    <string name="abr_app_com">Abrir APP completa</string>
</resources>