<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

  <item
      android:id="@+id/dialogAlterarCliente"
      android:icon="@drawable/ic_baseline_person_pin_24"
      android:title="item" />
  <item
      android:id="@+id/dialogAlterarCodigoPin"
      android:title="@string/alterar_codigo_pin" />
  <item
      android:id="@+id/dialogPlanoPacote"
      android:icon="@drawable/ic_baseline_assignment_turned_in_24"
      android:title="@string/subscricao_pacote" />
  <item
      android:id="@+id/dialogPoliticaPrivacidade"
      android:icon="@drawable/ic_baseline_privacy_tip_24"
      android:title="@string/politica_privacidade" />
  <item android:title="@string/precisa_ajuda" />
  <item
      android:id="@+id/bloquearFragment"
      android:icon="@android:drawable/ic_lock_lock"
      android:title="@string/bloquear" />
  <item
      android:id="@+id/acercaMborasytem"
      android:title="@string/ace" />
  <item
      android:id="@+id/itemSair"
      android:icon="@drawable/ic_baseline_close_24"
      android:title="@string/sair" />
</menu>