<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/categoriaProdutoFragment"
        android:icon="@drawable/ic_produto_60"
        android:title="@string/categoria_produto" />
    <item
        android:id="@+id/usuarioFragment"
        android:icon="@drawable/ic_usario_60"
        android:title="@string/usuario" />
    <item
        android:id="@+id/vendaFragment"
        android:icon="@drawable/ic_venda_60"
        android:title="@string/venda" />
    <item
        android:id="@+id/listaClienteFragment"
        android:icon="@drawable/ic_cliente_60"
        android:title="@string/cliente" />

    <item
        android:id="@+id/dashboardFragment"
        android:icon="@drawable/ic_dashboard_60"
        android:title="@string/dashboard" />

    <item
        android:id="@+id/facturaFragment"
        android:icon="@android:drawable/ic_input_add"
        android:title="@string/factura" />
</menu>