<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <ListPreference
        android:dialogTitle="@string/alt_idm"
        android:entries="@array/array_idioma"
        android:entryValues="@array/array_idioma"
        android:key="lista_idioma"
        android:title="@string/idm"
        app:dialogIcon="@drawable/ic_baseline_store_24"
        app:icon="@drawable/ic_baseline_translate_24"
        app:useSimpleSummaryProvider="true" />
    <PreferenceCategory
        android:title="@string/view"
        tools:ignore="TouchTargetSizeCheck">
    <SwitchPreference
        android:defaultValue="false"
        android:key="switch_most_nov"
        android:title="@string/n_most_nov_config"
        app:icon="@android:drawable/ic_menu_view"
        app:useSimpleSummaryProvider="true" />
        <SwitchPreference
            android:defaultValue="false"
            android:key="switch_qr_code"
            android:title="@string/ocult_qrcode"
            app:icon="@android:drawable/ic_menu_view"
            app:useSimpleSummaryProvider="true" />
    </PreferenceCategory>
    <PreferenceCategory
        android:title="@string/config_rede"
        tools:ignore="TouchTargetSizeCheck">
        <EditTextPreference
            android:defaultValue="@string/apn_mborasystem"
            android:key="apn"
            android:title="@string/apn"
            app:dialogIcon="@drawable/ic_baseline_store_24"
            app:icon="@android:drawable/ic_lock_idle_charging"
            app:useSimpleSummaryProvider="true" />
    </PreferenceCategory>
    <PreferenceCategory
        android:title="@string/aut_bio"
        tools:ignore="TouchTargetSizeCheck">
        <SwitchPreference
            android:defaultValue="true"
            android:key="autenticacaobiometrica"
            android:title="@string/act_aut_biom"
            app:icon="@drawable/ic_baseline_fingerprint_24"
            app:useSimpleSummaryProvider="true" />
    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/dds_cmc"
        tools:ignore="TouchTargetSizeCheck">
        <EditTextPreference
            android:key="nomecomercial"
            android:title="@string/nm_cmc"
            app:dialogIcon="@drawable/ic_baseline_store_24"
            app:icon="@drawable/ic_baseline_store_mall_comercial_24"
            app:useSimpleSummaryProvider="true" />

        <EditTextPreference
            android:key="textrodape"
            android:title="@string/text_rdp_fact"
            app:dialogIcon="@drawable/ic_baseline_store_24"
            app:icon="@drawable/ic_baseline_short_text_24"
            app:useSimpleSummaryProvider="true" />

        <EditTextPreference
            android:key="nib"
            android:title="@string/nib"
            app:dialogIcon="@drawable/ic_baseline_store_24"
            app:icon="@drawable/ic_baseline_credit_card_24"
            app:useSimpleSummaryProvider="true" />

        <EditTextPreference
            android:key="iban"
            android:title="@string/iban"
            app:dialogIcon="@drawable/ic_baseline_store_24"
            app:icon="@drawable/ic_baseline_credit_card_24"
            app:useSimpleSummaryProvider="true" />
    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/ipt_pre_def"
        tools:ignore="TouchTargetSizeCheck">
        <ListPreference
            android:defaultValue="AOA"
            android:entries="@array/array_moeda"
            android:entryValues="@array/array_moeda_valor"
            android:key="moeda"
            android:title="@string/md"
            app:dialogIcon="@drawable/ic_baseline_store_24"
            app:icon="@drawable/ic_baseline_moeda_24"
            app:useSimpleSummaryProvider="true" />
        <ListPreference
            android:defaultValue="0"
            android:entries="@array/array_taxa_iva"
            android:entryValues="@array/array_taxa_iva_valor"
            android:key="taxa_iva"
            android:title="@string/tx_iva_pdf"
            app:dialogIcon="@drawable/ic_baseline_store_24"
            app:icon="@drawable/ic_baseline_vertical_align_center_24"
            app:useSimpleSummaryProvider="true" />
        <ListPreference
            android:defaultValue="M00"
            android:entries="@array/array_motivo_isecao"
            android:entryValues="@array/array_motivo_isecao_valor"
            android:key="motivo_isencao"
            android:title="@string/mtv_pdf_isc"
            app:dialogIcon="@drawable/ic_baseline_store_24"
            app:icon="@drawable/ic_baseline_vertical_align_center_24"
            app:useSimpleSummaryProvider="true" />
    </PreferenceCategory>
</PreferenceScreen>