<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

  <item
      android:id="@+id/app_bar_search"
      android:icon="@drawable/ic_search_black_24dp"
      android:title="@string/pesquisar_produto"
      app:actionViewClass="android.widget.SearchView"
      app:showAsAction="ifRoom|collapseActionView" />
  <item
      android:id="@+id/calculadoraFragmentItem"
      android:icon="@drawable/ic_baseline_calculate_24"
      android:title="@string/calc"
      app:showAsAction="ifRoom|collapseActionView" />
  <item
      android:id="@+id/itemData"
      android:icon="@android:drawable/ic_menu_day"
      android:title="@string/dat_ems"
      app:showAsAction="collapseActionView" />

  <item
      android:id="@+id/itemEliminarCarrinho"
      android:icon="@drawable/ic_baseline_delete_40"
      android:title="@string/elm_pro_car"
      app:showAsAction="collapseActionView" />

  <item
      android:id="@+id/itemAbrApp"
      android:icon="@drawable/ic_baseline_store_24"
      android:title="@string/abr_app_com"
      android:visible="false"
      app:showAsAction="collapseActionView" />

  <item
      android:id="@+id/itemSair"
      android:icon="@drawable/ic_baseline_exit_to_app_24"
      android:title="@string/sair"
      android:visible="false"
      app:showAsAction="collapseActionView" />

</menu>