<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/app_bar_search"
        android:icon="@drawable/ic_search_black_24dp"
        android:title="@string/pesquisar_produto"
        app:actionViewClass="android.widget.SearchView"
        app:showAsAction="ifRoom|collapseActionView" />
    <item
        android:id="@+id/criarClienteCantina"
        android:icon="@drawable/ic_baseline_add_box_24"
        android:title="@string/criar_produto"
        app:showAsAction="ifRoom|collapseActionView" />
    <item
        android:id="@+id/exportarcliente"
        android:title="@string/exportcli" />
    <item
        android:id="@+id/importarcliente"
        android:title="@string/importcli" />

</menu>