<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/app_bar_search"
        android:icon="@drawable/ic_search_black_24dp"
        android:title="@string/pesquisar_produto"
        app:actionViewClass="android.widget.SearchView"
        app:showAsAction="ifRoom|collapseActionView" />
    <item
        android:id="@+id/dialogCriarProduto"
        android:icon="@drawable/ic_baseline_add_box_24"
        android:title="@string/criar_produto"
        app:showAsAction="ifRoom|collapseActionView" />
    <item
        android:id="@+id/dialogFiltrarProduto"
        android:icon="@drawable/ic_baseline_filter_list_24"
        android:title="@string/filtrar_produto"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/btnScannerBack"
        android:icon="@drawable/ic_baseline_camera_rear_24"
        android:title="@string/scan_bar"
        app:showAsAction="ifRoom|collapseActionView" />

</menu>