<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundColor"
    android:orientation="vertical">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputSenha"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margem_lateral_formulario"
        app:boxBackgroundColor="@color/material_on_background_disabled"
        app:boxStrokeColor="@color/white"
        app:endIconMode="password_toggle"
        app:endIconTint="@color/cor_castanha"
        app:endIconTintMode="multiply"
        app:hintTextColor="@color/white">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/senha"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margem_lateral_formulario"
            android:layout_marginTop="10dp"
            android:layout_marginRight="@dimen/margem_lateral_formulario"
            android:ems="10"
            android:hint="@string/senha"
            android:imeOptions="actionDone"
            android:inputType="textPersonName|text|textPassword">

        </com.google.android.material.textfield.TextInputEditText>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/layoutPin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margem_lateral_formulario"
        android:visibility="gone"
        app:boxBackgroundColor="@color/material_on_background_disabled"
        app:boxStrokeColor="@color/white"
        app:hintTextColor="@color/white"
        app:endIconMode="password_toggle"
        app:endIconTint="@color/cor_castanha"
        app:endIconTintMode="multiply">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/pin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margem_lateral_formulario"
            android:layout_marginTop="10dp"
            android:layout_marginRight="@dimen/margem_lateral_formulario"
            android:digits="0123456789"
            android:ems="10"
            android:hint="@string/codigopin"
            android:imeOptions="actionDone"
            android:inputType="numberPassword">

        </com.google.android.material.textfield.TextInputEditText>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/layoutPinRepete"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margem_lateral_formulario"
        android:visibility="gone"
        app:boxBackgroundColor="@color/material_on_background_disabled"
        app:boxStrokeColor="@color/white"
        app:hintTextColor="@color/white"
        app:endIconMode="password_toggle"
        app:endIconTint="@color/cor_castanha"
        app:endIconTintMode="multiply">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/pinRepete"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margem_lateral_formulario"
            android:layout_marginTop="10dp"
            android:layout_marginRight="@dimen/margem_lateral_formulario"
            android:digits="0123456789"
            android:ems="10"
            android:hint="@string/codigopinnovamente"
            android:imeOptions="actionDone"
            android:inputType="numberPassword">

        </com.google.android.material.textfield.TextInputEditText>
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btnEntrar"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginLeft="@dimen/margem_lateral_formulario"
        android:layout_marginRight="@dimen/margem_lateral_formulario"
        android:text="@string/entrar" />

    <Button
        android:id="@+id/btnAlterar"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginLeft="@dimen/margem_lateral_formulario"
        android:layout_marginRight="@dimen/margem_lateral_formulario"
        android:text="@string/ok"
        android:visibility="gone" />

    <Button
        android:id="@+id/buttonFechar"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginLeft="@dimen/margem_lateral_formulario"
        android:layout_marginRight="@dimen/margem_lateral_formulario"
        android:layout_marginBottom="20dp"
        android:text="@string/fechar"
        app:backgroundTint="@android:color/holo_orange_light" />
</androidx.appcompat.widget.LinearLayoutCompat>